Galeel | #1870 - Fixed the extra space issue when buttons are hidden

--- a/ui/app/styles/clinical/_patientDashboard.scss
+++ b/ui/app/styles/clinical/_patientDashboard.scss
@@ -371,6 +371,7 @@ table.drug-order-table td.drug {
   }
   .date {
     font-size: 11px;
+    text-align: right;
   }
   .toggle-btn {
     width: 24px;
